// hero/hero.proto
syntax = "proto3";

package math;

service MathService {
  rpc Accumulate (Argument) returns (Result) {}
  rpc Multiply (Argument) returns (Result) {}
  rpc ConnectBybit (Empty) returns (ResultOperation) {}
  rpc DisconnectBybit (Empty) returns (ResultOperation) {}
  rpc ReconnectBybit (Empty) returns (ResultOperation) {}
}

message Argument {
  repeated float argument = 1;
}

message Empty {}

message Result {
  float result = 1;
}

message ResultOperation {
  bool success = 1;
}